Card tilts imported and working Background changer now shades backgrounds Simple footer added Fixed scrollbar issues

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,10 +1,10 @@
 
 .footer_head {
-  position: fixed;
-   left: 0;
-   bottom: 0;
    width: 100%;
-   background-color: red;
+   background-color: rgba(39, 83, 171, 0.9);
    color: white;
    text-align: center;
+   padding-top: 20px;
+   margin-top: 40px;
+   padding-bottom: 20px;
 }
