--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -11,11 +11,41 @@ font-family: 'Righteous', cursive;
 font-family: 'Play', sans-serif;
 */
 
+.bot_land {
+  margin-top: 100px;
+  text-align: center;
+  color: white;
+  font-size: 60px;
+  font-family: 'IM Fell Double Pica SC', serif;
+  text-shadow: 3px 3px black;
+}
+
+.poobah {
+  padding: 10px 20px 20px 20px;
+  margin: 0 auto;
+  background-color: rgba(39, 83, 171,0.1);
+  border-radius: 70px;
+  color: white;
+  font-size: 20px;
+}
+
+.poobah:hover {
+  background-color: rgba(39, 83, 171,0.5);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
 .outermost {
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
-  background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.2)), url(../../Media/farm2.jpeg);
+  background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.1)), url(../../Media/garden4.jpg);
+}
+
+
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
 }
 
 .switcher button {
@@ -51,10 +81,11 @@ font-family: 'Play', sans-serif;
   padding-bottom: 10px;
 }
 
-.card img {
+img {
   width: 40%;
   display: block;
   margin: 0 auto;
+  padding-bottom: 20px;
 }
 
 .mainT {
